force-app/main/default/objects/Imovel_Interesse__c/Imovel_Interesse__c.object-meta.xml
<CustomObject>
    <description>Um imóvel mostrado a um cliente, dentro de um negócio. Existe porque Opportunity.Imovel__c é um lookup único: guarda onde o negócio aterrou e apaga o que se mostrou pelo caminho. Uma linha por imóvel; as visitas são os Eventos ligados a ela.</description>
    <label>Imóvel de Interesse</label>
    <nameField>
        <displayFormat>INT-{00000}</displayFormat>
        <label>Referência</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Imóveis de Interesse</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>