force-app/main/default/objects/Imovel_Interesse__c/fields/Data_Proposta__c.field-meta.xml
<CustomField>
    <fullName>Data_Proposta__c</fullName>
    <description>Quando a proposta foi feita. Sem ela não se sabe quem chegou primeiro, e no dia em que houver duas propostas é a primeira pergunta que o proprietário faz.</description>
    <label>Data da Proposta</label>
    <type>Date</type>
</CustomField>