force-app/main/default/objects/Imovel_Interesse__c/fields/Estado__c.field-meta.xml
<CustomField>
    <fullName>Estado__c</fullName>
    <description>Estado deste imóvel para este cliente.</description>
    <label>Estado</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value><fullName>Sugerido</fullName><default>true</default><label>Sugerido</label></value>
            <value><fullName>Visitado</fullName><default>false</default><label>Visitado</label></value>
            <value><fullName>Em espera</fullName><default>false</default><label>Em espera</label></value>
            <value><fullName>Proposta feita</fullName><default>false</default><label>Proposta feita</label></value>
            <value><fullName>Recusado</fullName><default>false</default><label>Recusado</label></value>
        </valueSetDefinition>
    </valueSet>
</CustomField>