force-app/main/default/objects/Imovel_Interesse__c/fields/Imovel__c.field-meta.xml
<CustomField>
    <fullName>Imovel__c</fullName>
    <description>Imóvel mostrado. Lookup: apagar o imóvel não apaga o histórico.</description>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Imóvel</label>
    <referenceTo>Imovel__c</referenceTo>
    <relationshipLabel>Clientes Interessados</relationshipLabel>
    <relationshipName>Interesses</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>