force-app/main/default/objects/Imovel_Interesse__c/fields/Motivo_Recusa__c.field-meta.xml
<CustomField>
    <fullName>Motivo_Recusa__c</fullName>
    <description>Razão da recusa do cliente, em texto livre.</description>
    <label>Motivo da Recusa</label>
    <length>255</length>
    <type>Text</type>
</CustomField>