force-app/main/default/objects/Imovel_Interesse__c/fields/Oportunidade__c.field-meta.xml
<CustomField>
    <fullName>Oportunidade__c</fullName>
    <description>Negócio a que este interesse pertence. Master-Detail para o roll-up.</description>
    <label>Negócio</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Imóveis de Interesse</relationshipLabel>
    <relationshipName>Imoveis_Interesse</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>