force-app/main/default/objects/Imovel_Interesse__c/fields/Valor_Proposta__c.field-meta.xml
<CustomField>
    <fullName>Valor_Proposta__c</fullName>
    <description>Quanto este cliente ofereceu por este imóvel. Vive aqui e não na Opportunity porque duas propostas concorrentes sobre o mesmo imóvel só se vêem lado a lado se estiverem na junção.</description>
    <label>Valor da Proposta</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>